--- a/azure-pipelines-build.yml
+++ b/azure-pipelines-build.yml
@@ -46,6 +46,6 @@ extends:
   # Filename in Azure DevOps Repository (note possible -ui or -api)
   # Django example: azure-pipelines-PROJECTNAME-api-release.yml
   # Drupal example: azure-pipelines-drupal-release.yml
-  template: azure-pipelines-build-PROJECTNAME.yml@PROJECTNAME-pipelines
+  template: azure-pipelines-build-hauki-api.yml@unittest10-pipelines
   #parameters:
     #imagetag: ${{ parameters.imagetag }}
